--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ before_install:
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
        sudo flatpak install -y flathub org.octave.Octave
-       sudo flatpak update -y --commit=5d975550fc59a93fdddae167d3c9fb5ef9fa675b org.octave.Octave # lastest 4.4.1 per https://github.com/flathub/org.octave.Octave/commits/master
+       sudo flatpak update -y --commit=3b8ca7a6dbe7ee7b8aeb0f4294f85e5ebf0745e55af19f1aedeb9ad128ae9eb4 org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
   - |
@@ -89,7 +89,8 @@ before_install:
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
        sudo flatpak install -y flathub org.octave.Octave
-       sudo flatpak update -y --commit=ac5a3b892fcb5ce79164380e1d0d4e8fe4290ab3 org.octave.Octave # lastest 5.1.0 per https://github.com/flathub/org.octave.Octave/commits/master
+       # from flatpak remote-info --log flathub org.octave.Octave: ac5a3b892fcb5ce79164380e1d0d4e8fe4290ab3 (https://github.com/flathub/org.octave.Octave/commits/master) -> 0aafd2e30314432fbf610775ef04ab96affb29bf192f609065bfac414ddd262d
+       sudo flatpak update -y --commit=0aafd2e30314432fbf610775ef04ab96affb29bf192f609065bfac414ddd262d org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
   - |
@@ -103,7 +104,7 @@ before_install:
        sudo apt install -y flatpak
        sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
        sudo flatpak install -y flathub org.octave.Octave
-       sudo flatpak update -y --commit=07bc55d3c81304bcfebf2372ecfa255ded8f8367 org.octave.Octave # lastest 5.2.0 per https://github.com/flathub/org.octave.Octave/commits/master
+       sudo flatpak update -y --commit=ecdeb157c47f1d08f0d9f2abe48e147892c5b7c71a5c0b15cc88a3a26ba332c5 org.octave.Octave
        ls $OCTAVE_ROOT_TMP
     fi
   - sudo apt-get install p7zip-full -y
