--- a/.travis.yml
+++ b/.travis.yml
@@ -127,6 +127,6 @@ before_install:
   - #sudo apt-get install -y binutils git python-dev gfortran # trick cmake into looking for fortran support
   - sudo pip install pysftp
   - source /home/travis/build/testbot/restricted/env.sh
-  - ssh-keyscan $GATE_SERVER >> ~/.ssh/known_hosts
+  #- ssh-keyscan $GATE_SERVER >> ~/.ssh/known_hosts
 
 
