--- a/.travis.yml
+++ b/.travis.yml
@@ -84,8 +84,8 @@ before_install:
   - pushd ../../ && git clone https://github.com/casadi/testbot.git
   - pushd testbot && source recipes/setup.sh || remote_access && popd
   - osx_gcc7_setup || remote_access
+  - python_setup_light || remote_access
   - slurp swig_matlab || remote_access
-  - python_setup || remote_access
   - mkdir -p /Users/travis/build/casadi/testbot || remote_access
   - slurp_common || remote_access
   - brew install gnu-sed pkg-config gmp isl mpfr libmpc automake gettext || echo 123
