--- a/.travis.yml
+++ b/.travis.yml
@@ -20,45 +20,13 @@ before_script:
   - set -e
  
 script:
-  - sudo apt-get install -y binutils gcc g++ gfortran cmake liblapack-dev libmumps-seq-dev libblas-dev liblapack-dev libxml2-dev
-  - sudo apt-get install -y fakeroot rpm alien
-  - pushd casadi
-  - mkdir build_temp
-  - pushd build_temp
-  - bash -c "cmake $casadi_build_flags -DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$MANYLINUX_PYTHON_INCLUDE_DIR -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DCMAKE_INSTALL_PREFIX=../python_install -DSWIG_EXPORT=ON .."
-  - make python_source
-  - popd
-  - mkdir build
-  - pushd build
-  - export BACKUP_PKG_CONFIG_PATH=$PKG_CONFIG_PATH
-  - dockcross_setup_finish
-  - grep "CONFIG_PATH" $HOME/env.txt
-  - echo $casadi_build_flags
-  - dockcross "echo \$PKG_CONFIG_PATH"
-  - dockcross "export CASADI_EXTRA_LIBRARIES_LAPACK=gfortran;export PKG_CONFIG_PATH=$BACKUP_PKG_CONFIG_PATH;$MANYLINUX_PYTHON_DIR/bin/pip install numpy;cmake -DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$MANYLINUX_PYTHON_INCLUDE_DIR -DWITH_OPENMP=OFF $casadi_build_flags -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DCMAKE_INSTALL_PREFIX=../python_install -DSWIG_IMPORT=ON .."
-  #- cmake -DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$CMAKE_PYTHON_INCLUDE_DIR -DWITH_OPENMP=OFF $casadi_build_flags -DCMAKE_BUILD_TYPE=Release -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DCMAKE_INSTALL_PREFIX=../python_install ..
-  - export HVERSION=`python /home/travis/build/testbot/helpers/extract_hversion.py`
-  - echo "::$HVERSION::"
-  - grep -i ipopt CMakeCache.txt
-  - dockcross  "$MANYLINUX_PYTHON_DIR/bin/pip install numpy;make install VERBOSE=1"
-
-  #- ldd ../python_install/casadi/libcasadi_nlpsolver_worhp.so
-  - popd
+  - script_debian python_install "-DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$MANYLINUX_PYTHON_INCLUDE_DIR -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DCMAKE_INSTALL_PREFIX=../python_install" python_source
   - export PYTHONPATH=$PYTHONPATH:`pwd`/python_install
-  - export WHEEL=`python $HOME/build/testbot/create_wheel_local.py $COMMIT $PYTHONVERSION linux $BITNESS python_install`
-  - echo $WHEEL
-  - git clone https://github.com/jgillis/auditwheel
-  - dockcross "$MANYLINUX_PYTHON3_BIN/pip install pyelftools wheel==0.31.1 && pushd auditwheel && $MANYLINUX_PYTHON3 setup.py install && popd && echo "$MANYLINUX_PYTHON3_BIN/auditwheel repair -g quadmath -g gfortran -e '.*snopt.*' -L . --no-update-tags -w . $WHEEL" && $MANYLINUX_PYTHON3_BIN/auditwheel repair -g quadmath -g gfortran -e '.*snopt.*' -L . --no-update-tags -w . $WHEEL"
-  - rm -rf python_install
-  - unzip $WHEEL -d python_install
-  - rm -rf python_install/*dist-info
-  - pushd python_install/casadi/casadi/jit && bash get_system_includes.sh gcc-4.8 c++ >  system_includes.txt && popd 
   - python -c "from casadi.tools import *;loadAllCompiledPlugins()"
   - python -c "from casadi import *;x = MX.sym('x');solver = nlpsol('solver','worhp',dict(x=x,g=x**2,f=x**6),dict(worhp=dict(MaxIter=2)));solver(lbg=1,ubg=2)"
   - pushd test
   #- python internal/test_py.py python -skipfiles="alltests.py helpers.py complexity.py speed.py"
   - popd
-  #- pushd test && make unittests_py && popd
   
 before_deploy:
   - echo "this file (and the casadi directory) should end up in a folder called 'casadi-linux-py$PYTHONVERSION-$COMMIT'" > python_install/dummy.txt
@@ -104,22 +72,7 @@ branches:
     - /.*commit.*/
     
 before_install: 
-  - sudo apt-get update
-  - pushd casadi && export COMMIT=`git rev-parse --short=7 HEAD` && popd
-  - pushd ../../ && git clone https://github.com/casadi/testbot.git
-  - pushd testbot && source recipes/setup.sh && popd
-  - python_setup
-  - dockcross_setup_start
-  - export SLURP_OS=trusty
-  - slurp swig_matlab
-  - export SLURP_OS=dockcross
-  - export SLURP_CROSS=$DOCKCROSS
-  - sudo apt-get install p7zip-full -y
-  - slurp_common
-  - slurp lapack
-  
-  - echo $PKG_CONFIG_PATH
-  - popd
-  - ssh-keyscan web.sourceforge.net >> ~/.ssh/known_hosts 
+  - wget https://raw.githubusercontent.com/casadi/testbot/master/before_install.sh && source before_install.sh
+  - before_install_debian
   
 
