--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ env:
     - BITNESS=64
     
   matrix:
-    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.4.1 TESTCOMMIT="1"
+    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.2.2 TESTCOMMIT="1"
+    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.4.1
     - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=5.1.0
     - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=5.2.0
     
@@ -57,18 +58,24 @@ branches:
 before_install:
   - wget https://raw.githubusercontent.com/casadi/testbot/master/before_install.sh && source before_install.sh
   - before_install_debian
-  - export OCTAVE_ROOT_TMP=/var/lib/flatpak/app/org.octave.Octave/x86_64/stable/active/files # versions: see https://github.com/flathub/org.octave.Octave
-  - export casadi_build_flags="$casadi_build_flags -DOCTAVE_ROOT_DIR=$OCTAVE_ROOT_TMP -DOCTAVE_BIN_PATHS=$OCTAVE_ROOT_TMP/bin -DOCTAVE_LIBRARIES_PATHS=$OCTAVE_ROOT_TMP/lib/octave/$OCTAVE_VERSION -DOCTAVE_INCLUDE_PATHS=$OCTAVE_ROOT_TMP/include/octave-$OCTAVE_VERSION/octave"
-  - echo $casadi_build_flags
-  - sudo add-apt-repository -y ppa:alexlarsson/flatpak
-  - sudo apt update || allowfail 100
-  - sudo apt install -y flatpak
-  - sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-  - sudo flatpak install -y flathub org.octave.Octave
+  - |
+    if [ "${OCTAVE_VERSION}" == "4.2.2" ]; then
+      sudo apt-add-repository ppa:octave/stable -y
+      sudo apt-get update -qq
+      sudo apt-get install octave liboctave-dev -y
+    else
+      export OCTAVE_ROOT_TMP=/host/var/lib/flatpak/app/org.octave.Octave/x86_64/stable/active/files # versions: see https://github.com/flathub/org.octave.Octave
+      export casadi_build_flags="$casadi_build_flags -DOCTAVE_ROOT_DIR=$OCTAVE_ROOT_TMP -DOCTAVE_BIN_PATHS=$OCTAVE_ROOT_TMP/bin -DOCTAVE_LIBRARIES_PATHS=$OCTAVE_ROOT_TMP/lib/octave/$OCTAVE_VERSION -DOCTAVE_INCLUDE_PATHS=$OCTAVE_ROOT_TMP/include/octave-$OCTAVE_VERSION/octave"
+      echo $casadi_build_flags
+      sudo add-apt-repository -y ppa:alexlarsson/flatpak
+      sudo apt update || allowfail 100
+      sudo apt install -y flatpak
+      sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+      sudo flatpak install -y flathub org.octave.Octave
+    fi
   - |
     if [ "${OCTAVE_VERSION}" == "4.4.1" ]; then
        sudo flatpak update -y --commit=3b8ca7a6dbe7ee7b8aeb0f4294f85e5ebf0745e55af19f1aedeb9ad128ae9eb4 org.octave.Octave
-       ls $OCTAVE_ROOT_TMP
     fi
   - |
     if [ "${OCTAVE_VERSION}" == "5.1.0" ]; then
