--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,13 @@ script:
   - testbot/recipes/fetch.sh matlab$MATLABRELEASE.tar.gz
   - mkdir matlab
   - travis_wait tar -xf matlab$MATLABRELEASE.tar.gz -C matlab
-  - ls -al /home/travis/build/
   - popd
+
   - pushd casadi
-  - mkdir build
   - mkdir -p build/swig/matlab/ && touch build/swig/matlab/SwigGet.m
-  - pushd build
-  - bash -c "cmake $casadi_build_flags -DWITH_OPENMP=OFF -DWITH_SELFCONTAINED=ON -DCMAKE_INSTALL_PREFIX=$MATLABPATH -DWITH_DEEPBIND=ON -DWITH_MATLAB=ON  -DWITH_DOC=ON -DWITH_EXAMPLES=ON -DWITH_EXTRA_WARNINGS=ON .."
-  - make VERBOSE=1
-  - sudo make install VERBOSE=1
   - popd
+  
+  - script_debian $MATLABPATH "-DWITH_OPENMP=OFF -DWITH_SELFCONTAINED=ON -DWITH_MATLAB=ON -DWITH_DEEPBIND=ON -DWITH_DOC=ON -DWITH_EXAMPLES=ON -DWITH_EXTRA_WARNINGS=ON -DCMAKE_INSTALL_PREFIX=/host$MATLABPATH" matlab_source
   
 before_deploy:
   #- echo "this file (and the casadi directory) should end up in a folder called 'casadi-linux-matlab$MATLABRELEASE-$COMMIT$NAME_SUFFIX'" > $MATLABPATH/dummy.txt
@@ -61,21 +58,5 @@ branches:
     - /.*appveyor.*/
     - /.*commit.*/
 before_install:
-  - pushd casadi && export COMMIT=`git rev-parse --short=7 HEAD` && popd
-  - pushd ../../ && git clone https://github.com/casadi/testbot.git
-  - pushd testbot && source recipes/setup.sh && popd
-  - sudo apt-get install p7zip-full -y
-  - export SLURP_OS=trusty
-  - export SLURP_GCC=4.7
-  - slurp_common
-  - slurp swig_matlab
-  - popd
-  - sudo apt-get update -qq
-  - sudo apt-get install -y binutils gcc-4.7 g++-4.7 gfortran-4.7 git cmake liblapack-dev ipython python-dev python-numpy python-scipy python-matplotlib libmumps-seq-dev libblas-dev liblapack-dev libxml2-dev
-  - export CC=gcc-4.7
-  - export CXX=g++-4.7
-  - export FC=gfortran-4.7
-  - ls /usr/lib/x86_64-linux-gnu
-  - sudo apt-get install fakeroot rpm alien
-  - sudo pip install pysftp
-  - ssh-keyscan web.sourceforge.net >> ~/.ssh/known_hosts 
+  - wget https://raw.githubusercontent.com/casadi/testbot/master/before_install.sh && source before_install.sh
+  - before_install_debian
