--- a/.travis.yml
+++ b/.travis.yml
@@ -86,4 +86,5 @@ before_install:
     if [ "${OCTAVE_VERSION}" == "5.2.0" ]; then
        sudo flatpak update -y --commit=ecdeb157c47f1d08f0d9f2abe48e147892c5b7c71a5c0b15cc88a3a26ba332c5 org.octave.Octave
     fi
+  - dockcross "echo $OCTAVE_ROOT_TMP/lib/octave/$OCTAVE_VERSION; ls $OCTAVE_ROOT_TMP/lib/octave/$OCTAVE_VERSION"
 
