--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ env:
     - BITNESS=64
     
   matrix:
-    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.2.2 TESTCOMMIT="1"
-    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.4.1
+    #- BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.2.2 
+    - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=4.4.1 TESTCOMMIT="1"
     - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=5.1.0
     - BUILD_TYPE=Release NAME_SUFFIX="" OCTAVE_VERSION=5.2.0
     
